--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h2>Aman </h2>
 
       <h2>VAMSI K 21MIC7068 </h2>
+    <h2> Divya Naga Sri- 22MIC7034</h2>
 
                                                                          
                                                                          
